# manim-tensorflow

./: .gitignore  pyproject.toml
src/manim_tensorflow/keras/: model.py  sequential.py
src/manim_tensorflow/keras/layers/: dense.py
src/manim_tensorflow/utils/: edge.py  layer.py  layer_filler.py  neuron.py
tests/: test_dense_layer.py
tests/dense/: test_surrounding_rectangle.py
tests/model/: test_model.py
