[tool.poetry]
name = "manim-tensorflow"
version = "0.1.0"
description = ""
authors = ["Risang Baskoro <risangbaskoro@gmail.com>"]
readme = "README.md"
packages = [{include = "manim_tensorflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dependencies.manim]
version = "^0.17.0"
python = ">=3.11,<3.12"

[tool.poetry.plugins."manim.plugins"]
"manim_tensorflow" = "module:object.attr"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
